# hereswhy-ingestor

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: bot_injest_job.yml
src/: config.py  env (1).txt  env.txt  main.py  models.py  snsUtils.py  test.ipynb
